# neural

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile
include/: gui.h  network.h  neural.h  vecmath.h
src/: gui.c  main.c  neural.c  vecmath.c
